zabbix/zabbix-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zabbix-web-ingress
  namespace: zabbix
spec:
  tls:
  - hosts:
    - zabbix.k3s.internal
    secretName: zabbix-k3s-internal
  rules:
  - host: zabbix.k3s.internal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zabbix-zabbix-web
            port:
              number: 80
